Three Star System Alpha
Added dictionary for storing levels and values. Rough set up of what I think will work

--- a/PUD_Game/Assembly-CSharp.csproj
+++ b/PUD_Game/Assembly-CSharp.csproj
@@ -63,8 +63,9 @@
     <Compile Include="Assets\Scripts\Controls\touchLocation.cs" />
     <Compile Include="Assets\Scripts\Collectible\Collectible.cs" />
     <Compile Include="Assets\Scripts\Controls\old\GrappleScript.cs" />
-    <Compile Include="Assets\Scripts\Controls\multipleTouch.cs" />
     <Compile Include="Assets\Scripts\GameModes\ThreeStar.cs" />
+    <Compile Include="Assets\Scripts\Controls\multipleTouch.cs" />
+    <Compile Include="Assets\Scripts\GameModes\ThreeStarGM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
