Trying out Level Select Video
Put the scripts from the level select video. Its kinda jank but might be worth looking at it some more. Its not hard to make our own

--- a/PUD_Game/Assembly-CSharp.csproj
+++ b/PUD_Game/Assembly-CSharp.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Assets\Scripts\GameModes\ThreeStar.cs" />
     <Compile Include="Assets\Scripts\Controls\multipleTouch.cs" />
     <Compile Include="Assets\Scripts\GameModes\ThreeStarLevelSelector.cs" />
+    <Compile Include="Assets\Scripts\GameModes\LevelSelector.cs" />
+    <Compile Include="Assets\Scripts\PageSwiper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
